...
            "state": "translated",
            "value": "找不到该成员"
          }
        }
      }
    },
    "Actors": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "成员"
          }
...
            "state": "translated",
            "value": "管理员"
          }
        }
      }
    },
    "Agent": {},
    "Agent Invite": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "Agent 邀请"
...
            "state": "translated",
            "value": "复制链接"
          }
        }
      }
    },
    "Copy link": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "复制链接"
          }
...
            "state": "translated",
            "value": "勿扰模式"
          }
        }
      }
    },
    "Done": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "完成"
          }
...
            "state": "translated",
            "value": "打断 Agent"
          }
        }
      }
    },
    "Invite": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "邀请"
          }
...
            "state": "translated",
            "value": "%@ 发布的。不含已归档的想法。"
          }
        }
      }
    },
    "Password": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "密码"
          }
...
            "state": "translated",
            "value": "会话存储不可用。"
          }
        }
      }
    },
    "Sessions": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "会话"
          }
...
